# notion-docs-sync

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: tag-latest.yml
notion_docs_sync/: __init__.py  markdown.py
